<resources>
    <string name="app_name">Weather</string>
    <string name="title">Weather API</string>
    <string name="search">Pesquisar</string>
    <string name="local">Tempo Local</string>
    <string name="weathers">Climas Salvos</string>
    <string name="ambient">Ar Ambiente</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="switchsensacao">Usar a sua sensação do clima?</string>
    <string name="nascer">Nascer do Sol</string>
    <string name="por">Pôr do Sol</string>
    <string name="vento">Vento</string>
    <string name="pressao">Pressão</string>
    <string name="humidade">Humidade</string>
    <string name="sensacao">Sensação</string>
    <string name="temperatura">Temperatura</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="config">Configurações</string>
</resources>